gpu: Add a couple of unit-tests for GpuService.

Add a couple of unit-tests to verify that GpuService can be destroyed
safely both after incoming GpuServiceRequest have been bound, or while
they are scheduled to be bound.

BUG=706375, 706357
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2787363003
Cr-Commit-Position: refs/heads/master@{#461658}

Former-commit-id: 94d7bbdbc5110011a16039c47afa60c4ee065687