gpu/ipc/service/gpu_watchdog_thread.h
@@ -19,10 +19,6 @@
 #include "ui/gfx/native_widget_types.h"
 
 #if defined(USE_X11)
-extern "C" {
-#include <X11/Xlib.h>
-#include <X11/Xatom.h>
-}
 #include <sys/poll.h>
 #include "ui/base/x/x11_util.h"  // nogncheck
 #include "ui/gfx/x/x11_types.h"  // nogncheck
